tereo and z-index fixes

--- a/src/assets/toolkit/styles/6-components/navigation/_components.site-header-tray.scss
+++ b/src/assets/toolkit/styles/6-components/navigation/_components.site-header-tray.scss
@@ -1622,6 +1622,9 @@ body#hubv4 {
                       }
                       &.expanded {
                         border-top: 1px $mahoe solid;
+                      > .btn-expander {
+                        color: $pounamu;
+                      }
                         &:before {
                           left: 0px;
                           opacity: 1;
@@ -1654,6 +1657,15 @@ body#hubv4 {
                 }
               }
 
+              .sidemenu-toggle {
+                > a {
+                  > .tereo-nav-title,
+                  > .tereo-title {
+                    display: block;
+                    color: $kowhai;
+                  }
+                }
+              }
               .home-link {
                 padding: 6px 15px;
                 background-color: $mahoe;
@@ -1846,16 +1858,16 @@ body#hubv4 {
                 color: $green-brand;
                 margin-bottom: 5px;
               }
-              &.expanded {
-                .tereo-nav-title {
-                  color: $kowhai;
-                }
-                > .btn-expander {
-                  &:after {
-                    transform: rotateZ(180deg);
-                  }
-                }
-              }
+              // &.expanded {
+              //   .tereo-nav-title {
+              //     color: $kowhai;
+              //   }
+              //   > .btn-expander {
+              //     &:after {
+              //       transform: rotateZ(180deg);
+              //     }
+              //   }
+              // }
               &:active,
               &:focus,
               &.expanded {
